--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -32,6 +32,12 @@ secp256k1 = { version = "0.28.2", default-features = false, features = [
     "rand",
     "global-context",
 ], optional = true }
+blst = { version = "0.3.11" }
+cometbft = { version = "=0.1.0-alpha.2" }
+cometbft-light-client-verifier = { version = "0.1.0-alpha.2" }
+cometbft-proto = { version = "0.1.0-alpha.2" }
+cometbft-light-client = { version = "0.1.0-alpha.2" }
+prost = { version = "0.12.3" }
 
 [dev-dependencies]
 criterion = { version = "0.5" }
