--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -6,9 +6,9 @@ concurrency:
 
 on:
   push:
-    branches: [main]
+    branches: [main, develop]
   pull_request:
-    branches: [main]
+    branches: [main, develop]
   merge_group:
 
 jobs:
