--- a/.github/workflows/ethereum-tests.yml
+++ b/.github/workflows/ethereum-tests.yml
@@ -6,9 +6,9 @@ concurrency:
 
 on:
   push:
-    branches: [main, "release/**"]
+    branches: [main, develop, "release/**"]
   pull_request:
-    branches: [main, "release/**"]
+    branches: [main, develop, "release/**"]
 
 jobs:
   tests-stable:
