--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -54,6 +54,7 @@ std = [
     "c-kzg?/std",
     "secp256k1?/std",
 ]
+hashbrown = ["revm-primitives/hashbrown"]
 asm-keccak = ["revm-primitives/asm-keccak"]
 
 optimism = ["revm-primitives/optimism"]
