--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -26,7 +26,7 @@ c-kzg = { version = "1.0.0", default-features = false, optional = true }
 
 # ecRecover precompile
 k256 = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
-secp256k1 = { version = "0.28.2", default-features = false, features = [
+secp256k1 = { version = "0.29.0", default-features = false, features = [
     "alloc",
     "recovery",
     "rand",
@@ -38,6 +38,13 @@ cometbft-proto = { version = "0.1.0-alpha.2" }
 cometbft-light-client = { version = "0.1.0-alpha.2" }
 prost = { version = "0.12.3" }
 bls_on_arkworks = "0.3.0"
+tendermint = { git = "https://github.com/bnb-chain/tendermint-rs-parlia", branch = "parlia-develop", features = ["secp256k1"] }
+parity-bytes = { version = "0.1.2", default-features = false }
+alloy-rlp = { version = "0.3", default-features = false, features = [
+    "arrayvec",
+    "derive",
+] }
+alloy-primitives = {version = "0.7.0"}
 
 [dev-dependencies]
 criterion = { version = "0.5" }
@@ -75,6 +82,8 @@ portable = ["revm-primitives/portable", "c-kzg?/portable"]
 # The problem that `secp256k1` has is it fails to build for `wasm` target on Windows and Mac as it is c lib.
 # In Linux it passes. If you don't require to build wasm on win/mac, it is safe to use it and it is enabled by default.
 secp256k1 = ["dep:secp256k1"]
+
+bsc = []
 
 [[bench]]
 name = "bench"
