--- a/crates/primitives/Cargo.toml
+++ b/crates/primitives/Cargo.toml
@@ -90,3 +90,6 @@ optional_beneficiary_reward = []
 
 # See comments in `revm-precompile`
 c-kzg = ["dep:c-kzg", "dep:once_cell", "dep:derive_more"]
+
+
+bsc = []
