fix some issues

--- a/crates/revm/Cargo.toml
+++ b/crates/revm/Cargo.toml
@@ -103,6 +103,8 @@ optional_beneficiary_reward = ["revm-interpreter/optional_beneficiary_reward"]
 secp256k1 = ["revm-precompile/secp256k1"]
 c-kzg = ["revm-precompile/c-kzg"]
 
+bsc = ["revm-precompile/bsc"]
+
 [[example]]
 name = "fork_ref_transact"
 path = "../../examples/fork_ref_transact.rs"
