--- a/crates/interpreter/Cargo.toml
+++ b/crates/interpreter/Cargo.toml
@@ -56,3 +56,11 @@ optional_eip3607 = ["revm-primitives/optional_eip3607"]
 optional_gas_refund = ["revm-primitives/optional_gas_refund"]
 optional_no_base_fee = ["revm-primitives/optional_no_base_fee"]
 optional_beneficiary_reward = ["revm-primitives/optional_beneficiary_reward"]
+opbnb = ["revm-primitives/opbnb"]
+opbnb-default-handler = [
+    "opbnb",
+    "revm-primitives/opbnb-default-handler",
+]
+negate-opbnb-default-handler = [
+    "revm-primitives/negate-opbnb-default-handler",
+]
