--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -77,6 +77,15 @@ portable = ["revm-primitives/portable", "c-kzg?/portable"]
 # In Linux it passes. If you don't require to build wasm on win/mac, it is safe to use it and it is enabled by default.
 secp256k1 = ["dep:secp256k1"]
 
+opbnb = ["revm-primitives/opbnb"]
+opbnb-default-handler = [
+    "opbnb",
+    "revm-primitives/opbnb-default-handler",
+]
+negate-opbnb-default-handler = [
+    "revm-primitives/negate-opbnb-default-handler",
+]
+
 [[bench]]
 name = "bench"
 path = "benches/bench.rs"
