--- a/crates/revm/Cargo.toml
+++ b/crates/revm/Cargo.toml
@@ -103,6 +103,13 @@ optional_beneficiary_reward = ["revm-interpreter/optional_beneficiary_reward"]
 secp256k1 = ["revm-precompile/secp256k1"]
 c-kzg = ["revm-precompile/c-kzg"]
 
+opbnb = ["revm-interpreter/opbnb", "revm-precompile/opbnb"]
+opbnb-default-handler = [
+    "opbnb",
+    "revm-precompile/opbnb-default-handler",
+    "revm-interpreter/opbnb-default-handler",
+]
+
 [[example]]
 name = "fork_ref_transact"
 path = "../../examples/fork_ref_transact.rs"
