--- a/crates/primitives/Cargo.toml
+++ b/crates/primitives/Cargo.toml
@@ -66,6 +66,7 @@ arbitrary = ["std", "alloy-primitives/arbitrary", "bitflags/arbitrary"]
 asm-keccak = ["alloy-primitives/asm-keccak"]
 portable = ["c-kzg?/portable"]
 
+bsc = []
 optimism = []
 # Optimism default handler enabled Optimism handler register by default in EvmBuilder.
 optimism-default-handler = ["optimism"]
