--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -32,10 +32,10 @@ secp256k1 = { version = "0.28.2", default-features = false, features = [
     "rand",
     "global-context",
 ], optional = true }
-cometbft = { version = "=0.1.0-alpha.2" }
-cometbft-light-client-verifier = { version = "0.1.0-alpha.2" }
-cometbft-proto = { version = "0.1.0-alpha.2" }
-cometbft-light-client = { version = "0.1.0-alpha.2" }
+cometbft = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "4e77e57" }
+cometbft-light-client-verifier = {  git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "4e77e57" }
+cometbft-proto = {  git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "4e77e57" }
+cometbft-light-client = {  git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "4e77e57" }
 prost = { version = "0.12.3" }
 bls_on_arkworks = "0.3.0"
 
