--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,9 @@ concurrency:
 
 on:
   push:
-    branches: [main, "release/**"]
+    branches: [main, develop, "release/**"]
   pull_request:
-    branches: [main, "release/**"]
+    branches: [main, develop, "release/**"]
 
 env:
   CARGO_TERM_COLOR: always
@@ -31,16 +31,16 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - run: cargo test --workspace ${{ matrix.flags }}
 
-  test-no-std:
-    name: test no_std
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: riscv32imac-unknown-none-elf
-      - run: cargo check --target riscv32imac-unknown-none-elf --no-default-features
+  # test-no-std:
+  #   name: test no_std
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 30
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: dtolnay/rust-toolchain@stable
+  #       with:
+  #         targets: riscv32imac-unknown-none-elf
+  #     - run: cargo check --target riscv32imac-unknown-none-elf --no-default-features
 
   check-no-default-features:
     name: check no-default-features
