--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -32,6 +32,12 @@ secp256k1 = { version = "0.28.2", default-features = false, features = [
     "rand",
     "global-context",
 ], optional = true }
+cometbft = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
+cometbft-light-client-verifier = {  git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
+cometbft-proto = {  git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
+cometbft-light-client = {  git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
+prost = { version = "0.12.3" }
+bls_on_arkworks = "0.3.0"
 
 [dev-dependencies]
 criterion = { version = "0.5" }
@@ -70,6 +76,15 @@ portable = ["revm-primitives/portable", "c-kzg?/portable"]
 # The problem that `secp256k1` has is it fails to build for `wasm` target on Windows and Mac as it is c lib.
 # In Linux it passes. If you don't require to build wasm on win/mac, it is safe to use it and it is enabled by default.
 secp256k1 = ["dep:secp256k1"]
+
+opbnb = ["revm-primitives/opbnb"]
+opbnb-default-handler = [
+    "opbnb",
+    "revm-primitives/opbnb-default-handler",
+]
+negate-opbnb-default-handler = [
+    "revm-primitives/negate-opbnb-default-handler",
+]
 
 [[bench]]
 name = "bench"
