--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -39,6 +39,9 @@ cometbft-light-client = {  git = "https://github.com/bnb-chain/greenfield-cometb
 prost = { version = "0.12.3" }
 bls_on_arkworks = "0.3.0"
 
+# p256verify precompile
+p256 = { version = "0.13.2", optional = true,  default-features = false, features = ["ecdsa"] }
+
 [dev-dependencies]
 criterion = { version = "0.5" }
 rand = { version = "0.8", features = ["std"] }
@@ -56,7 +59,7 @@ std = [
 ]
 asm-keccak = ["revm-primitives/asm-keccak"]
 
-optimism = ["revm-primitives/optimism"]
+optimism = ["revm-primitives/optimism", "secp256r1"]
 # Optimism default handler enabled Optimism handler register by default in EvmBuilder.
 optimism-default-handler = [
     "optimism",
@@ -65,6 +68,9 @@ optimism-default-handler = [
 negate-optimism-default-handler = [
     "revm-primitives/negate-optimism-default-handler",
 ]
+
+# Enables the p256verify precompile.
+secp256r1 = ["dep:p256"]
 
 # These libraries may not work on all no_std platforms as they depend on C.
 
