--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -45,6 +45,11 @@ p256 = { version = "0.13.2", optional = true,  default-features = false, feature
 [dev-dependencies]
 criterion = { version = "0.5" }
 rand = { version = "0.8", features = ["std"] }
+eyre = "0.6.12"
+rstest = "0.19.0"
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
 
 [features]
 default = ["std", "c-kzg", "secp256k1", "portable"]
