--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,8 @@ jobs:
       fail-fast: false
       matrix:
         rust: ["stable", "beta", "nightly"]
-        flags: ["--no-default-features", "", "--all-features"]
+#        flags: ["--no-default-features", "", "--all-features"]
+        flags: ["", "--features bsc", "--features optimism,opbnb"]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@master
@@ -42,57 +43,71 @@ jobs:
   #         targets: riscv32imac-unknown-none-elf
   #     - run: cargo check --target riscv32imac-unknown-none-elf --no-default-features
 
-  check-no-default-features:
-    name: check no-default-features
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v4
-      - run: |
-          cd crates/revm
-          cargo check --no-default-features
-
-  check-serde:
-    name: check serde
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v4
-      - run: |
-          cd crates/revm
-          cargo check --no-default-features --features serde
-
-  check-std:
-    name: check std
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v4
-      - run: |
-          cd crates/revm
-          cargo check --no-default-features --features std
+#  check-no-default-features:
+#    name: check no-default-features
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 30
+#    steps:
+#      - uses: actions/checkout@v4
+#      - run: |
+#          cd crates/revm
+#          cargo check --no-default-features
+#
+#  check-serde:
+#    name: check serde
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 30
+#    steps:
+#      - uses: actions/checkout@v4
+#      - run: |
+#          cd crates/revm
+#          cargo check --no-default-features --features serde
+#
+#  check-std:
+#    name: check std
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 30
+#    steps:
+#      - uses: actions/checkout@v4
+#      - run: |
+#          cd crates/revm
+#          cargo check --no-default-features --features std
 
   clippy:
-    name: clippy
+    name: clippy / ${{ matrix.network }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    strategy:
+      matrix:
+        include:
+          - network: optimism
+            extra-features: "opbnb"
+          - network: bsc
+            extra-features: ""
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo clippy --workspace --all-targets --all-features
+      - run: cargo clippy --workspace --all-targets --features "${{ matrix.network }} ${{ matrix.extra-features }}"
         env:
           RUSTFLAGS: -Dwarnings
 
   docs:
-    name: docs
+    name: docs / ${{ matrix.network }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    strategy:
+      matrix:
+        include:
+          - network: optimism
+            extra-features: "opbnb"
+          - network: bsc
+            extra-features: ""
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: rust-docs
-      - run: cargo doc --workspace --all-features --no-deps --document-private-items
+      - run: cargo doc --workspace --no-deps --document-private-items --features "${{ matrix.network }} ${{ matrix.extra-features }}"
         env:
           RUSTDOCFLAGS: "--cfg docsrs -D warnings"
 
