feat: use `kzg-rs` for kzg point evaluation (#1558)
* feat: use `kzg-rs`

* fix: use `c-kzg` by default in std env

* refactor: feature gate by `c-kzg`

* fix: use published crate

* fix: `kzg-rs` import

* feat: use `cfg_if` for `kzg-rs` imports

* feat: use `kzg-rs`

* fix: `kzg-rs` import

* chore: add `kzg-rs` feature to revm-interpreter

* fix: check kzg-rs enable in revm/precompile

* fix: kzg-rs include once_cell and derive_more in primitives, update feature tags

* Update crates/primitives/src/lib.rs

* Update crates/precompile/src/lib.rs

* Update crates/primitives/Cargo.toml

* Update crates/revm/Cargo.toml

* Update crates/precompile/Cargo.toml

* Update crates/primitives/src/lib.rs

---------

Co-authored-by: rakita <rakita@users.noreply.github.com>

--- a/crates/interpreter/Cargo.toml
+++ b/crates/interpreter/Cargo.toml
@@ -90,3 +90,5 @@ opbnb-default-handler = [
 negate-opbnb-default-handler = [
     "revm-primitives/negate-opbnb-default-handler",
 ]
+
+kzg-rs = ["revm-primitives/kzg-rs"]
