--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -22,7 +22,7 @@ rust_2018_idioms = "deny"
 all = "warn"
 
 [dependencies]
-alloy-rlp = { version = "0.3.7", default-features = false, features = [
+alloy-rlp = { version = "0.3.7", default-features = false, optional = true, features = [
     "arrayvec",
     "derive",
 ] }
@@ -41,11 +41,11 @@ secp256k1 = { version = ">=0.28, <=0.29", default-features = false, features = [
 cometbft = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "5582327" }
 cometbft-light-client-verifier = {  git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "5582327" }
 cometbft-proto = {  git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "5582327" }
-cometbft-light-client = {  git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "5582327", default-features = false }
+cometbft-light-client = {  git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "5582327" }
 prost = { version = "0.12.6" }
 bls_on_arkworks = "0.3.0"
 tendermint = { git = "https://github.com/bnb-chain/tendermint-rs-parlia", rev = "8c21ccbd58a174e07eed2c9343e63ccd00f0fbd5", optional = true, features = ["secp256k1"] }
-parity-bytes = { version = "0.1.2", default-features = false }
+parity-bytes = { version = "0.1.2", optional = true, default-features = false }
 
 # SHA2-256 and RIPEMD-160
 sha2 = { version = "0.10", default-features = false }
@@ -99,7 +99,7 @@ std = [
 hashbrown = ["revm-primitives/hashbrown"]
 asm-keccak = ["revm-primitives/asm-keccak"]
 
-bsc = ["revm-primitives/bsc", "secp256k1", "secp256r1", "tendermint"]
+bsc = ["revm-primitives/bsc", "alloy-rlp", "parity-bytes", "secp256k1", "secp256r1", "tendermint"]
 
 optimism = ["revm-primitives/optimism", "secp256r1"]
 # Optimism default handler enabled Optimism handler register by default in EvmBuilder.
