--- a/crates/handler/Cargo.toml
+++ b/crates/handler/Cargo.toml
@@ -40,6 +40,7 @@ serde = { version = "1.0", default-features = false, features = [
 	"derive",
 	"rc",
 ], optional = true }
+tracing = "0.1.41"
 
 [dev-dependencies]
 database.workspace = true
